--- a/package.json
+++ b/package.json
@@ -15,18 +15,24 @@
     "@emotion/styled": "^11.13.0",
     "@fontsource/roboto": "^5.1.0",
     "@mui/material": "^6.1.2",
+    "@mui/styled-engine-sc": "^6.1.2",
+    "@mui/x-data-grid": "^7.19.0",
     "@reduxjs/toolkit": "^2.2.7",
     "@types/crypto-js": "^4.2.2",
     "axios": "^1.7.7",
     "crypto-js": "^4.2.0",
     "jwt-decode": "^4.0.0",
+    "md5": "^2.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "react-toastify": "^10.0.5",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
+    "@types/md5": "^2.3.5",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
