--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -15,6 +15,7 @@
       "services/*": ["./src/services/*"],
       "store/*": ["./src/store/*"],
       "hooks/*": ["./src/hooks/*"],
+      "types/*": ["./src/types/*"],
     },
 
     /* Bundler mode */
