--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@fontsource/roboto": "^5.1.0",
+    "@mui/icons-material": "^6.1.2",
     "@mui/material": "^6.1.2",
     "@mui/styled-engine-sc": "^6.1.2",
     "@mui/x-data-grid": "^7.19.0",
